<resources>
    <string name="app_name">Login Application Rework</string>
    <string name="login">Log in</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="welcome">Welcome Image</string>
    <string name="welcomeMessage">Welcome, User.</string>
    <string name="welcomeUser">Welcome, %s!</string>
    <string name="welcomeGuest">You are not welcome here. Go back.</string>
    <string name="register">Register</string>
    <string name="createAccount">Join the Tarot Club</string>
    <string name="notYetAMember">Not a Member? Ask Mr.Fool.</string>
</resources>