<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/loginPicture"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginBottom="64dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/welcome"
        android:src="@drawable/klein_moretti"
        app:shapeAppearanceOverlay="@style/circleImageView" />

    <EditText
        android:id="@+id/inputUsername"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:autofillHints="username"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="@color/blackish" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/password"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="@color/blackish"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/login"
        android:backgroundTint="@color/midnight_blue"/>
    
    <Button
        android:id="@+id/buttonToRegister"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/notYetAMember"
        android:textColor="@color/blackish"/>

</LinearLayout>